<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pizza Ordering App</string>
    <string name="toolbar_title">Pizza Ordering App</string>
    <string name="current_order_title">Current Order</string>
    <string name="store_orders_title">Store Orders</string>
    <string name="ru_pizza_main_menu">RU Pizza Main Menu</string>
    <string name="chicago_pizza">Chicago Pizza</string>
    <string name="ny_pizza">NY Pizza</string>
    <string name="current_order">Current Order</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="hamburger_menu_description">Hamburger Menu</string>
    <string name="chicago_style">Chicago Style</string>
    <string name="ny_style">NY Style</string>
    <string name="order_number">Order Number:</string>
    <string name="order_total">Order Total:</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="sales_tax">Sales Tax: $</string>
    <string name="total">Total: $</string>
    <string name="clear">Clear</string>
    <string name="price">Price:</string>
    <string name="add_to_order">Add To Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="default_topping_name">Topping Name</string>
    <string name="yummy_pizza">Yummy Pizza!</string>
    <string name="zero">$0.00</string>
    <string name="topping_image_desc">Image of the topping</string>
</resources>
