<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lime_green"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            <ImageButton
                android:id="@+id/hamburger_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/chicagopizzaimage"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/hamburger_menu_description"
                android:layout_gravity="start"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/yummy_pizza"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"

                />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/mainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/light_red"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="100dp">
                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicago_pizza"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:textColor="@color/lime_green"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="24dp"

                    />
                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/lime_green"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                >

                <Spinner
                    android:id="@+id/pizzaTypeSpinner"
                    android:layout_width="133dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:spinnerMode="dropdown"
                    android:background="@color/white"
                    android:popupBackground="@color/lime_green"
                    android:layout_marginEnd="5dp"

                    />

                <Spinner
                    android:id="@+id/pizzaSizeSpinner"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:spinnerMode="dropdown"
                    android:background="@color/white"
                    android:popupBackground="@color/lime_green"
                    android:layout_marginEnd="5dp"
                    />

                <Spinner
                    android:id="@+id/pizzaCrustSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:spinnerMode="dropdown"
                    android:background="@color/white"
                    android:popupBackground="@color/lime_green"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toppingsRecyclerView"
                android:layout_width="400dp"
                android:layout_height="1400dp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="75dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                >

                <ImageView
                    android:id="@+id/pizzaImageView"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chicagopizzaimage"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:id="@+id/priceTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        android:textColor="@color/lime_green"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="25dp"
                        android:gravity="start" />

                    <EditText
                        android:id="@+id/priceTextViewDynamic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:clickable="false"
                        android:text="@string/zero"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/lime_green"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        />

                    <Button
                        android:id="@+id/placeOrderButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_order"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/light_red"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lime_green"
            android:elevation="4dp"
            android:layout_gravity="bottom"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/backbutton"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/hamburger_menu_description"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                />

        </androidx.appcompat.widget.Toolbar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>